[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://FirstDemo.gd" type="Script" id=2]
[ext_resource path="res://character.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Move Spots",
]]
position = Vector2( 256, 128 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 64, 64 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D"]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 64, 64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Area2D2" type="Area2D" parent="." groups=[
"Move Spots",
]]
position = Vector2( 0, 256 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 64, 64 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="Area2D2"]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 64, 64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Area2D3" type="Area2D" parent="." groups=[
"Move Spots",
]]
position = Vector2( 384, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 64, 64 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="Area2D3"]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 64, 64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 64, 64 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 64, 64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="Area2D2" to="." method="_on_Area2D2_input_event"]
[connection signal="input_event" from="Area2D3" to="." method="_on_Area2D3_input_event"]
[connection signal="input_event" from="KinematicBody2D" to="KinematicBody2D" method="_on_KinematicBody2D_input_event"]
